--- a/support.html
+++ b/support.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Meditation App Support</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1>Meditation Diary</h1>
@@ -11,10 +12,11 @@
     <div class="download-appstore">
       <a href="#"><img src="images/download-appstore.png"></a>
     </div>
-    <p>Available for <strong>iPhone</strong> and <strong>iPad</strong>.</p><br>
+    <p>Available for <strong>iPhone</strong> and <strong>iPad</strong>.</p>
   </body>
   <footer>
-    <h2>Contacts</h2>
-    <a href="mailto:pietro@dettole.com?subject=feedback"><img src="images/mail.png"></a>
+    <a href="#"><img src="images/fb.png"></a>
+    <a href="#"><img src="images/ig.png"></a>
+    <a href="mailto:pietro@dettole.com?subject=Support"><img src="images/mail.png"></a>
   </footer>
 </html>
